--- a/ui-toolkit.css
+++ b/ui-toolkit.css
@@ -3615,7 +3615,7 @@ html:hover [class^="ss-"] {
   position: absolute;
   right: 14px;
   top: 14px;
-  z-index: 1; }
+  z-index: 3; }
 
 .cui__field__error-tooltip {
   font-size: 11px;
